<resources>
    <string name="app_name">TheNulos</string>
    <string name="entre_text">Bem vindo ao TheNulos!</string>
    <string name="username_text">usuário</string>
    <string name="password_text">senha</string>
    <string name="cadastrar_text">Não é cadastrado?</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_config">Configurações</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_sair">Sair</string>
    <string name="cadastro_paises_text">Cadastro de Países</string>
    <string name="paises_nav">Países</string>
    <string name="sobre_nav">Sobre</string>
    <string name="sair_nav">Sair</string>
    <string name="open">Abrir</string>
    <string name="close">Fechar</string>
    <string name="Sobre">Nosso app tem por objetivo trazer informações significativas sobre diferentes países. Não há nenhum tipo de critério para a escolha dos paises listados, são apenas para uso informativo.</string>
    <string name="login">Login</string>
    <string name="localizacao">Localização</string>
    <string name="localiza">Localização</string>
    <string name="action_deletar">Deletar</string>
    <string name="action_alterar">Alterar</string>
</resources>