<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mundi2">


    <TextView
        android:id="@+id/texto_entre"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:gravity="center"
        android:text="@string/entre_text"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white_background"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/username_text"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white_background"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textColorHint="@color/white_background"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white_background"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/chkRememberMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:text="Lembrar login">
    </CheckBox>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:shadowRadius="@integer/material_motion_duration_long_2"
        android:text="@string/login" />

    <TextView
        android:id="@+id/texto_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cadastrar_text"
        android:textColor="@color/white"/>

<!--    <ImageView-->
<!--        android:id="@+id/imagemLogin"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:srcCompat="@drawable/paises" />-->


</LinearLayout>